# si-rust-libs

./: .cspell.json  .gitignore  .taplo.toml  Cargo.toml  README.md  deny.toml  devenv.nix  justfile  si-rust-libs.code-workspace
crates/reportify/: Cargo.toml  README.md
crates/reportify/src/: lib.rs
crates/si-crypto-hashes/: Cargo.toml
crates/si-crypto-hashes/src/: lib.rs  serde.rs
crates/si-observability/: Cargo.toml
crates/si-observability/examples/: basic.rs
crates/si-observability/src/: clap4.rs  lib.rs  otlp.rs  sealed.rs
