[package]
name = "reportify"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.9.8"
tracing.workspace = true
tracing-error = "0.2.1"

[lints]
workspace = true

[dev-dependencies]
thiserror = "2.0.17"
