[package]
name = "si-observability"
version = "0.1.1"
description = "This crate provides a reusable basis for developing applications with strong, built-in observability."
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
console = "0.15.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

clap4 = { package = "clap", version = "4.5.37", optional = true, features = ["derive"] }

# OTLP-related dependencies.
opentelemetry = { version = "0.29.1", optional = true }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.29.0", features = ["metrics", "reqwest-rustls-webpki-roots"], optional = true }
opentelemetry-semantic-conventions = { version = "0.29.0", optional = true }
tracing-opentelemetry = { version = "0.30.0", optional = true }

[features]
clap4 = ["dep:clap4"]
otlp = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-semantic-conventions"]

[[example]]
name = "basic"
required-features = ["clap4", "otlp"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
