[package]
name = "si-observability"
version = "0.1.3"
description = "This crate provides a reusable basis for developing applications with strong, built-in observability."
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
console.workspace = true
tracing.workspace = true

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

clap4 = { package = "clap", version = "4.5.37", optional = true, features = ["derive"] }

# OTLP-related dependencies.
opentelemetry = { version = "0.30", optional = true }
opentelemetry-otlp = { version = "0.30", features = ["metrics", "reqwest-rustls-webpki-roots"], optional = true }
opentelemetry-semantic-conventions = { version = "0.30", optional = true }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"], optional = true }
opentelemetry-appender-tracing = { version = "0.30", optional = true, features = ["experimental_use_tracing_span_context"] }
tracing-opentelemetry = { version = "0.31", optional = true }

[features]
full = ["clap4", "otlp"]

clap4 = ["dep:clap4"]

# Export logs and traces via OTLP.
otlp = [
    "otlp-traces",
    "otlp-logs",
]
# Export logs via OTLP.
otlp-logs = [
    "__otlp",
    "dep:opentelemetry-appender-tracing",
]
# Export traces via OTLP.
otlp-traces = [
    "__otlp",
    "dep:tracing-opentelemetry",
]
# Basic OTLP support.
__otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-semantic-conventions",
]

[[example]]
name = "basic"
required-features = ["clap4", "otlp"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
